AX: Add AccessibilityThreadTextApisEnabled flag and hook it up to several APIs https://bugs.webkit.org/show_bug.cgi?id=267477 rdar://problem/120928163

Reviewed by Chris Fleizach and Andres Gonzalez.

This patch also adds a mechanism for testing this configuration, and adds 7 tests.

* LayoutTests/TestExpectations: Skip ax-thread-text-apis/ tests by default.
* LayoutTests/accessibility-isolated-tree/TestExpectations:
* LayoutTests/accessibility/ax-thread-text-apis/character-offset-from-upstream-position-expected.txt: Added.
* LayoutTests/accessibility/ax-thread-text-apis/character-offset-from-upstream-position.html: Added.
* LayoutTests/accessibility/ax-thread-text-apis/content-editable-attributed-string-expected.txt: Added.
* LayoutTests/accessibility/ax-thread-text-apis/content-editable-attributed-string.html: Added.
* LayoutTests/accessibility/ax-thread-text-apis/element-for-text-marker-expected.txt: Added.
* LayoutTests/accessibility/ax-thread-text-apis/element-for-text-marker.html: Added.
* LayoutTests/accessibility/ax-thread-text-apis/text-marker-for-bounds-expected.txt: Added.
* LayoutTests/accessibility/ax-thread-text-apis/text-marker-for-bounds.html: Added.
* LayoutTests/accessibility/ax-thread-text-apis/text-marker-length-expected.txt: Added.
* LayoutTests/accessibility/ax-thread-text-apis/text-marker-length.html: Added.
* LayoutTests/accessibility/ax-thread-text-apis/text-marker-range-for-empty-contenteditable-expected.txt: Added.
* LayoutTests/accessibility/ax-thread-text-apis/text-marker-range-for-empty-contenteditable.html: Added.
* LayoutTests/accessibility/ax-thread-text-apis/text-marker-with-user-select-none-expected.txt: Added.
* LayoutTests/accessibility/ax-thread-text-apis/text-marker-with-user-select-none.html: Added.
* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::AXObjectCache):
* Source/WebCore/accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::accessibilityThreadTextApisEnabled):
* Source/WebCore/accessibility/AXTextMarker.cpp:
(WebCore::AXTextMarker::findMarker const):
* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:forParameter:]):

Canonical link: https://commits.webkit.org/273130@main